--- a/static/css/base.css
+++ b/static/css/base.css
@@ -90,3 +90,58 @@ nav {
     color: var(--base-color);
     text-transform: uppercase;
 }
+
+/* Footer Section */
+footer {
+    width: 100%;
+    background-color: #f7f8f9;
+}
+
+.footer-widgets {
+    padding: 60px 0;
+}
+
+.footer-widgets > .container {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.col-footer {
+    max-width: 33%;
+}
+
+.col-footer:first-child {
+    display: flex;
+    flex-direction: column;
+}
+
+.col-footer:first-child h1 {
+    font-size: 25px;
+    color: #edcb9a;
+    margin-bottom: 15px;
+}
+
+.col-footer:nth-child(2) h1 {
+    text-transform: uppercase;
+    font-size: 25px;
+    margin-bottom: 15px;
+    color: #afafaf;
+}
+
+.footer-desc {
+    font-size: 15px;
+    color: #afafaf;
+    line-height: 28px;
+    margin-bottom: 15px;
+}
+
+.footer-sns {
+    display: flex;
+}
+
+.footer-sns li a i {
+    color: #afafaf;
+    font-size: 30px;
+    padding-right: 40px;
+}
