--- a/templates/core/home.html
+++ b/templates/core/home.html
@@ -22,7 +22,7 @@
     </div>
 </section>
 <section id="reservation">
-    <form action="" method="POST">
+    <form action="" method="get">
         <label for="name">name
             <input type="text" placeholder="write your name">
         </label>
