--- a/templates/rooms/room_list.html
+++ b/templates/rooms/room_list.html
@@ -1,5 +1,10 @@
 {% extends 'base.html' %}
 
+<!-- Middle Section -->
+<section id="middle-section">
+    <h1 class="middle-section-title">Rooms</h1>
+    <h2>Home / </h2><span class="middle-section-subtitle">Rooms</span>
+</section>
 
 {% block body %}
     <h1>This is room list section</h1>
