--- a/static/css/shop.css
+++ b/static/css/shop.css
@@ -16,3 +16,56 @@ a {
 ul, li {
     list-style: none;
 }
+
+.container {
+
+}
+
+/* Middle Section */
+#middle-section {
+    background-image: url('../images/middle_bg2.png');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 20vh;
+    position: relative;
+}
+
+#middle-section::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: linear-gradient(#e66465, #9198e5);
+    width: 100%;
+    height: 20vh;
+}
+
+.container {
+    margin: 10% 15%;
+}
+
+#shop-item {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    gap: 5px;
+    text-align: center;
+}
+
+.item-desc a {
+    color: #afafaf;
+    font-size: 20px;
+}
+
+.item-desc h2 {
+    color: #afafaf;
+    font-size: 15px;
+}
+
+/* Pagination */
+.pagination {
+    display: flex;
+    font-size: 25px;
+    max-width: 500px;
+}
