--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -1,3 +1,4 @@
+<!-- Header Section -->
 <header>
     <p class="welcome-msg">welcome to hotel KrungThai</p>
     <div class="top-right-menu">
@@ -13,10 +14,12 @@
         </ul>
     </div>
 </header>
+
+<!-- Navbar Section -->
 <nav>
-    <p class="logo">
+    <div class="logo">
         <a href="{% url 'core:home' %}">KrungThai.</a>
-    </p>
+    </div>
     <div class="navbar-items">
         <ul class="navbar-item">
             <li><a href="{% url 'core:home' %}">home</a></li>
