--- a/static/css/base.css
+++ b/static/css/base.css
@@ -67,9 +67,11 @@ header {
 
 nav {
     font-weight: 700;
-    padding: 30px 25px;
+    width: 100%;
+    height: 8vh;
     display: flex;
     justify-content: space-between;
+    align-items: center; 
 }
 
 .logo a {
