--- a/static/css/shop.css
+++ b/static/css/shop.css
@@ -17,10 +17,6 @@ ul, li {
     list-style: none;
 }
 
-.container {
-
-}
-
 /* Middle Section */
 #middle-section {
     background-image: url('../images/middle_bg2.png');
@@ -39,6 +35,12 @@ ul, li {
     background-color: linear-gradient(#e66465, #9198e5);
     width: 100%;
     height: 20vh;
+}
+
+.middle-section {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
 }
 
 .container {
