--- a/static/css/home.css
+++ b/static/css/home.css
@@ -11,7 +11,7 @@
 
 .slider {
     width: 100%;
-    height: 70vh;
+    height: 100vh;
     position: relative;
 }
 
@@ -21,31 +21,32 @@
 
 .slider-item {
     width: 100%;
-    height: 70vh;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     position: absolute;
     top: 0;
-    z-index: 0;
+    left: 0;
 }
+
 
 #first-slide {
     background-image: url('../images/bg1.png');
-    background-size: cover;
+    background-size: 100% 100%;
     background-repeat: no-repeat;
 }
 
 #second-slide {
     background-image: url('../images/bg2.png');
-    background-size: cover;
+    background-size: 100% 100%;
     background-repeat: no-repeat;
 }
 
 #third-slide {
     background-image: url('../images/bg3.png');
-    background-size: cover;
+    background-size: 100% 100%;
     background-repeat: no-repeat;
 }
 
